Fixed background display on mobile devices

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -51,16 +51,21 @@
 }
 
 .profile__overlay {
+    position: relative;
+}
+
+.profile__overlay img {
     position: fixed;
     inset: 0;
-    z-index: -1000;
-    background: fixed url("https://c.wallhere.com/photos/a3/43/mountains_high_snow-988481.jpg!d") center no-repeat;
+    z-index: -1;
+    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
     filter: blur(2px);
     -webkit-filter: blur(2px);
+    height: 100%;
+    width: 100%;
 }
 
 ::-webkit-scrollbar {
